force-app/main/default/objects/Anomalie__c/Anomalie__c.object-meta.xml
<CustomObject>
    <description>Objet technique permettant de stocker les anomalies associées au PUDO, en particulier les anomalies provenant de la télécollecte.</description>
    <label>Anomalie</label>
    <nameField>
        <label>Numéro de l&#39;anomalie</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Anomalies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>