force-app/main/default/objects/Anomalie__c/fields/Datededetection__c.field-meta.xml
<CustomField>
    <fullName>Datededetection__c</fullName>
    <label>Date de détection</label>
    <type>DateTime</type>
</CustomField>