force-app/main/default/objects/Anomalie__c/fields/Links_to_PDA__c.field-meta.xml
<CustomField>
    <fullName>Links_to_PDA__c</fullName>
    <description>Link to the external system only if one device.</description>
    <formula>CASE( NB_PDA__c , 
1,HYPERLINK($Label.TECH_URL_CYCLOPE+$Label.TECH_URL_CYCLOPE_PDA+PDA_ids__c,PDA_type__c+&#39; &#39;+PDA_ids__c),
HYPERLINK($Label.TECH_URL_CYCLOPE,$Label.TOO_MANY_DEVICE+&#39;...&#39;+PDA_ids__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Links_to_PDA</label>
    <type>Text</type>
</CustomField>