force-app/main/default/objects/Anomalie__c/fields/NB_PDA__c.field-meta.xml
<CustomField>
    <fullName>NB_PDA__c</fullName>
    <description>Number of PDA with Anomalies</description>
    <label>NB PDA</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>