force-app/main/default/objects/Anomalie__c/fields/Numero_Anomalie__c.field-meta.xml
<CustomField>
    <fullName>Numero_Anomalie__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Numéro Anomalie</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>