force-app/main/default/objects/Anomalie__c/fields/Ouvert_SyncPudo__c.field-meta.xml
<CustomField>
    <fullName>Ouvert_SyncPudo__c</fullName>
    <description>Renvoie la valeur vrai si l&#39;anomalie de synchronisation est en cours</description>
    <formula>If( AND( ISPICKVAL(Statut__c, &quot;1&quot;), ISPICKVAL(Type__c , &quot;SyncPudo&quot;)),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ouvert_SyncPudo</label>
    <type>Checkbox</type>
</CustomField>