force-app/main/default/objects/Anomalie__c/fields/PDA_ids__c.field-meta.xml
<CustomField>
    <fullName>PDA_ids__c</fullName>
    <description>Display the PDA id(s) related to the anomaly. The ids are extracted from the description field by trigger.</description>
    <label>PDA_ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>