force-app/main/default/objects/Anomalie__c/fields/PDA_type__c.field-meta.xml
<CustomField>
    <fullName>PDA_type__c</fullName>
    <description>Display the PDA type(s) related to the anomaly. The type of PDA are extracted from the description field by trigger.</description>
    <label>PDA_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>