force-app/main/default/objects/Anomalie__c/fields/PUDO__c.field-meta.xml
<CustomField>
    <fullName>PUDO__c</fullName>
    <label>PUDO</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Anomalies_de_Telecollecte</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>