force-app/main/default/objects/Anomalie__c/fields/Tech_ContactPudo__c.field-meta.xml
<CustomField>
    <fullName>Tech_ContactPudo__c</fullName>
    <formula>PUDO__r.Contact_operationnel_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_ContactPudo</label>
    <type>Text</type>
</CustomField>