force-app/main/default/objects/Anomalie__c/fields/TestNumberTest__c.field-meta.xml
<CustomField>
    <fullName>TestNumberTest__c</fullName>
    <label>TestNumber</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>