force-app/main/default/objects/Anomalie__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SyncPudo</fullName>
            </value>
            <value>
                <fullName>NoDevice</fullName>
            </value>
            <value>
                <fullName>TooManyDevices</fullName>
            </value>
            <value>
                <fullName>NoDecommissioned</fullName>
            </value>
            <value>
                <fullName>Association à tort Etat 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>